--- a/n.html
+++ b/n.html
@@ -216,16 +216,16 @@
       import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
 
       // Firebase configuration
-      const firebaseConfig = {
-        apiKey: "AIzaSyAaOp49avUlLknLkGzskeCPCk9xPOAeMUE",
-        authDomain: "gpi0-d1e6d.firebaseapp.com",
-        databaseURL: "https://gpi0-d1e6d-default-rtdb.firebaseio.com",
-        projectId: "gpi0-d1e6d",
-        storageBucket: "gpi0-d1e6d.appspot.com",
-        messagingSenderId: "138797690477",
-        appId: "1:138797690477:web:5d04dd40ed2a577dbed964",
-        measurementId: "G-DP0JJ2FX3D"
-      };
+     const firebaseConfig = {
+            apiKey: "AIzaSyCt7rn1_hQ53Nw3_zEG6NHJK_k8_WCxnOQ",
+            authDomain: "nnnnn-eab3a.firebaseapp.com",
+            databaseURL: "https://nnnnn-eab3a-default-rtdb.firebaseio.com",
+            projectId: "nnnnn-eab3a",
+            storageBucket: "nnnnn-eab3a.appspot.com",
+            messagingSenderId: "991598507522",
+            appId: "1:991598507522:web:6582f02e05845a5383191b",
+            measurementId: "G-C37B9FH1HJ"
+        };
 
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
