--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                 <a href="#">מדיניות פרטיות</a>
                 <a href="#">שאלות נפוצות</a>
                 <a href="#">בלוג</a>
-                <a href="#">קריירה</a>
+                <a href="ניהולהזמנות.html">ניהול </a>
                 <a href="2.html">ניסוי</a>
             </div>
             <p>&copy; 2023 GPI - Global Products Industries Connect. כל הזכויות שמורות.</p>
